--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ git+https://github.com/bkg/django-spillway.git@39773dd69e7f2c6c7ddd80f6d620a45dd
 pylibmc==1.3.0
 pytz==2016.6.1
 pandas==0.18.1
+django-cors-headers
 
 mapnik==0.1
 mapbox-vector-tile==0.2.1
