add all csv support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Django related requirements
 django==1.9.9
 django-filter==0.13.0
+djangorestframework-csv
 psycopg2==2.6.1
 simplejson==3.8.2
 djangorestframework==3.3.3
